<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/note_icon_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/note_icon_1" />

            <ImageView
                android:id="@+id/note_icon_vector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/note_icon_vector" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_ready_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ready_for_delivery_line1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/colorBlackLight"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/text_ready_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/ready_for_delivery_line2"
                android:fontFamily="@font/poppins_regular"
                android:textSize="10sp"
                android:textColor="@color/colorBlackLight"/>
            <TextView
                android:id="@+id/text_ready_line_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ready_for_delivery_line3"
                android:fontFamily="@font/poppins_regular"
                android:textSize="10sp"
                android:textColor="@color/colorBlackLight"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/note_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/note_icon_vector" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_delivery_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_delivery_line1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/colorGrayDark2"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/text_delivery_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/in_delivery_line2"
                android:fontFamily="@font/poppins_regular"
                android:textSize="10sp"
                android:textColor="@color/colorGrayDark2"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/note_icon" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_delivered_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivered_line1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/colorGrayDark2"
                android:textSize="12sp"/>


            <TextView
                android:id="@+id/text_delivered_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/delivered_line2"
                android:fontFamily="@font/poppins_regular"
                android:textSize="10sp"
                android:textColor="@color/colorGrayDark2"/>
            <TextView
                android:id="@+id/text_delivered_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/delivered_line3"
                android:fontFamily="@font/poppins_regular"
                android:textSize="10sp"
                android:textColor="@color/colorGrayDark2"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>